load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "route",
    srcs = ["route.go"],
    importpath = "github.com/prometheus/common/route",
    visibility = ["//visibility:public"],
    deps = ["@com_github_julienschmidt_httprouter//:httprouter"],
)

alias(
    name = "go_default_library",
    actual = ":route",
    visibility = ["//visibility:public"],
)

go_test(
    name = "route_test",
    srcs = ["route_test.go"],
    embed = [":route"],
)
