load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "server",
    srcs = ["static_file_server.go"],
    importpath = "github.com/prometheus/common/server",
    visibility = ["//visibility:public"],
)

alias(
    name = "go_default_library",
    actual = ":server",
    visibility = ["//visibility:public"],
)

go_test(
    name = "server_test",
    srcs = ["static_file_server_test.go"],
    embed = [":server"],
)
