load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "version",
    srcs = [
        "info.go",
        "info_default.go",
        "info_go118.go",
    ],
    importpath = "github.com/prometheus/common/version",
    visibility = ["//visibility:public"],
    deps = ["@com_github_prometheus_client_golang//prometheus"],
)

alias(
    name = "go_default_library",
    actual = ":version",
    visibility = ["//visibility:public"],
)
