load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "templates",
    srcs = ["time.go"],
    importpath = "github.com/prometheus/common/helpers/templates",
    visibility = ["//visibility:public"],
    deps = ["//model"],
)

alias(
    name = "go_default_library",
    actual = ":templates",
    visibility = ["//visibility:public"],
)

go_test(
    name = "templates_test",
    srcs = ["time_test.go"],
    embed = [":templates"],
    deps = ["@com_github_stretchr_testify//require"],
)
